--- a/assets/queries.css
+++ b/assets/queries.css
@@ -1,10 +1,11 @@
-/* If screen portrait, stack divs vertically */
+/* If screen portrait, stack divs vertically, allow vertical scroll */
 @media screen and (orientation:portrait) {
 
     /* Variables */
     :root {
-        --portraitGraphColHeight: 40%;
-        --paletteDivHeight: 70px !important;
+        --portraitGraphColHeight: 60%;
+        --portraitImageColHeight: 80%;
+        --paletteDivHeight: 90px !important;
         --colPadding: 30px !important;
         --bottomMargin: 30px !important;
     }
@@ -23,7 +24,7 @@
         width: 100% !important;
         top: var(--portraitGraphColHeight);
         left: 0 !important;
-        height: calc(120% - var(--portraitGraphColHeight) - var(--bottomMargin));
+        height: calc(var(--portraitImageColHeight) - var(--bottomMargin));
         background-color: #f4f4f4;
     }
 
@@ -34,14 +35,14 @@
 
     /* FONTS */
     h1 {
-        font-size: 4.2em !important;
+        font-size: 5.5em !important;
     }
 
     h2 {
-        font-size: 2.2em !important;
+        font-size: 3.5em !important;
     }
 
     h3 {
-        font-size: 1.8em !important;
+        font-size: 2.8em !important;
     }
 }
