--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,15 @@
     margin: auto;
 }
 
+/* Loading Screen */
+._dash-loading{
+    margin-top: 200px;
+    font-family: 'Lato', sans-serif;
+    font-size: 4.5em;
+    font-weight: lighter;
+    text-align: center;
+}
+
 /* Palette Bar */
 #paletteDiv{
     position: absolute;
